scripts/k8s/istio/gateway.yml
# @see https://istio.io/latest/docs/concepts/traffic-management/#virtual-services
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: workshop-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-route
spec:
  hosts:
    - "*"
  gateways:
    - workshop-gateway
  http:
    - match:
        - uri:
            prefix: /comments
      route:
        - destination:
            host: comments-service
            port:
              number: 3000
    - match:
        - uri:
            prefix: /posts
      route:
        - destination:
            host: posts-service
            port:
              number: 3000
    - match:
        - uri:
            prefix: /users
      route:
        - destination:
            host: users-service
            port:
              number: 3000
